manifest/demoteam/app-that-stores-data-to-disk/prod/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-that-stores-data-to-disk
    env: prod
    team: demoteam
  name: app-that-stores-data-to-disk
spec:
  template:
    metadata:
      annotations:
        fnatt.io/inject-ca-bundle: enabled
        fnatt.io/inject-ca-env: enabled
      labels:
        team: demoteam
        app: app-that-stores-data-to-disk
        env: prod
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
      - name: app-that-stores-data-to-disk-volume-ephemeral
        persistentVolumeClaim:
          claimName: app-that-stores-data-to-disk-pvc-ephemeral-v2
      - name: app-that-stores-data-to-disk-volume-persistent
        persistentVolumeClaim:
          claimName: app-that-stores-data-to-disk-pvc-persistent
      containers:
      - image: polarisit/storage:0.3.12
        livenessProbe:
          periodSeconds: 3
          initialDelaySeconds: 10
          httpGet:
            path: /health/status
            port: 8080
        resources:
          requests:
            cpu: '0.5'
            memory: 512Mi
          limits:
            cpu: '2'
            memory: 2Gi
        securityContext: {}
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /tmp/data
          name: app-that-stores-data-to-disk-volume-ephemeral
          readOnly: false
        - mountPath: /app/data
          name: app-that-stores-data-to-disk-volume-persistent
          readOnly: false
        name: main
        readinessProbe:
          periodSeconds: 3
          initialDelaySeconds: 10
          httpGet:
            path: /health/status
            port: 8080
  selector:
    matchLabels:
      team: demoteam
      app: app-that-stores-data-to-disk
      env: prod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: app-that-stores-data-to-disk
    env: prod
    team: demoteam
  name: app-that-stores-data-to-disk
spec:
  ingressClassName: ingress-nginx-pm
  rules:
  - host: app-that-stores-data-to-disk.prod.fnatt.no
    http:
      paths:
      - path: /
        backend:
          service:
            port:
              number: 80
            name: app-that-stores-data-to-disk
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-that-stores-data-to-disk
    env: prod
    team: demoteam
  name: app-that-stores-data-to-disk
spec:
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
  selector:
    app: app-that-stores-data-to-disk
    env: prod
    team: demoteam
